[tool.poetry]
name = "dnschef"
version = "0.6.0"
description = "A highly configurable DNS proxy for Penetration Testers and Malware Analysts"
authors = ["iphelix <iphelix@thesprawl.org>","byt3bl33d3r <byt3bl33d3r@pm.me>"]
readme = "README.md"
license = "BSD-3-Clause"
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
exclude = ["tests"]

[tool.poetry.dependencies]
python = "^3.10"
dnslib = "^0.9.23"
rich = "^13.5.3"
structlog = "^23.1.0"

[tool.poetry.scripts]
dnschef = 'dnschef.__main__:main'
dnschef-ng = 'dnschef.__main__:main'

[tool.poetry.group.api.dependencies]
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
flake8 = "^6.1.0"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
